[package]
name = "fusion-custody"
authors.workspace = true
edition.workspace = true
version.workspace = true
repository.workspace = true
homepage.workspace = true
license.workspace = true

[dependencies]
anyhow = {workspace = true}
argon2 = "0.5"
ark-ff = {workspace = true}
ark-serialize = {workspace = true}
base64 = {workspace = true}
blake2b_simd = {workspace = true}
bytes = {workspace = true, features = ["serde"]}
chacha20poly1305 = {workspace = true}
decaf377 = {workspace = true}
decaf377-frost = { version = "1.2.0", path = "../crypto/decaf377-frost" }
decaf377-ka = {workspace = true}
decaf377-rdsa = {workspace = true}
ed25519-consensus = {workspace = true}
futures = {workspace = true}
hex = {workspace = true}
fusion-governance = {workspace = true, default-features = false}
fusion-keys = {workspace = true, default-features = true}
fusion-proto = {workspace = true, features = ["rpc"], default-features = true}
fusion-stake = {workspace = true, default-features = false}
fusion-transaction = {workspace = true, default-features = true}
fusion-txhash = {workspace = true, default-features = true}
prost = {workspace = true}
rand_core = {workspace = true}
serde = {workspace = true, features = ["derive"]}
serde_json = {workspace = true}
serde_with = {workspace = true, features = ["hex"]}
tokio = {workspace = true, features = ["full"]}
tonic = {workspace = true}
tracing = {workspace = true}

[dev-dependencies]
toml = {workspace = true}
