[package]
name = "fusion-view"
authors.workspace = true
edition.workspace = true
version.workspace = true
repository.workspace = true
homepage.workspace = true
license.workspace = true

[features]
default = ["std"]
# When this feature is enabled, the view worker will request every single
# SCT root, to pinpoint exactly where any SCT root divergence occurs.
sct-divergence-check = []
std = ["ark-std/std"]

[dependencies]
anyhow = {workspace = true}
ark-std = {workspace = true, default-features = false}
async-stream = {workspace = true}
async-trait = {workspace = true}
bytes = {workspace = true, features = ["serde"]}
camino = {workspace = true}
cnidarium = {workspace = true, features = ["rpc"]}
decaf377 = {workspace = true, features = ["r1cs"], default-features = true}
digest = "0.9"
ed25519-consensus = {workspace = true}
futures = {workspace = true}
genawaiter = "0.99"
hex = {workspace = true}
ibc-types = {workspace = true, default-features = false}
metrics = {workspace = true}
once_cell = {workspace = true}
parking_lot = {workspace = true}
fusion-app = {workspace = true, default-features = false}
fusion-asset = {workspace = true, default-features = true}
fusion-community-pool = {workspace = true, default-features = false}
fusion-compact-block = {workspace = true, default-features = false}
fusion-dex = {workspace = true, default-features = false}
fusion-distributions = {workspace = true, default-features = false}
fusion-fee = {workspace = true, default-features = false}
fusion-funding = {workspace = true, default-features = false}
fusion-governance = {workspace = true, default-features = false}
fusion-ibc = {workspace = true, default-features = false}
fusion-keys = {workspace = true, default-features = true}
fusion-num = {workspace = true, default-features = true}
fusion-proto = {workspace = true, features = ["rpc"], default-features = true}
fusion-sct = {workspace = true, default-features = false}
fusion-shielded-pool = {workspace = true, default-features = false}
fusion-stake = {workspace = true, default-features = false}
fusion-tct = {workspace = true, default-features = true}
fusion-transaction = {workspace = true, default-features = true}
fusion-auction = {workspace = true, default-features = false}
prost = {workspace = true}
r2d2 = {workspace = true}
r2d2_sqlite = {workspace = true, features = ["bundled"]}
rand = {workspace = true}
rand_core = {workspace = true, features = ["getrandom"]}
serde = {workspace = true, features = ["derive"]}
serde_json = {workspace = true}
sha2 = {workspace = true}
tap = {workspace = true}
tendermint = {workspace = true}
tokio = {workspace = true, features = ["full"]}
tokio-stream = {workspace = true, features = ["sync"]}
tonic = {workspace = true, features = ["tls", "tls-webpki-roots"]}
tracing = {workspace = true}
tracing-subscriber = {workspace = true}
url = {workspace = true}
pbjson-types = { workspace = true }
