[package]
name = "summonerd"
authors.workspace = true
edition.workspace = true
version.workspace = true
repository.workspace = true
homepage.workspace = true
license.workspace = true

[package.metadata.dist]
dist = true

[dependencies]
anyhow = {workspace = true}
ark-groth16 = {workspace = true}
ark-serialize = {workspace = true}
askama = "0.11"
async-trait = {workspace = true}
axum = {workspace = true}
bytes = {workspace = true}
camino = {workspace = true}
chrono = {workspace = true}
clap = {workspace = true, features = ["derive", "env", "color"]}
decaf377 = {workspace = true}
futures = {workspace = true}
hex = {workspace = true}
http-body = {workspace = true}
metrics-tracing-context = {workspace = true}
fusion-asset = {workspace = true, default-features = true}
fusion-keys = {workspace = true, default-features = true}
fusion-num = {workspace = true, default-features = true}
fusion-proof-params = {workspace = true, default-features = true}
fusion-proof-setup = {workspace = true, features = ["parallel"]}
fusion-proto = {workspace = true, default-features = true}
fusion-view = {workspace = true}
r2d2 = {workspace = true}
r2d2_sqlite = {workspace = true, features = ["bundled"]}
rand = {workspace = true}
rand_core = {workspace = true}
tokio = {workspace = true, features = ["full"]}
tokio-stream = {workspace = true}
tonic = {workspace = true}
tower = {workspace = true}
tracing = {workspace = true}
tracing-subscriber = {workspace = true}
url = {workspace = true}
