[package]
name = "fusion-txhash"
authors.workspace = true
edition.workspace = true
version.workspace = true
repository.workspace = true
homepage.workspace = true
license.workspace = true

[dependencies]
anyhow = {workspace = true}
blake2b_simd = {workspace = true}
hex = {workspace = true}
fusion-proto = {workspace = true, default-features = false}
fusion-tct = {workspace = true, default-features = true}
serde = {workspace = true}
getrandom = {workspace = true}
