[package]
name = "fusion-proof-setup"
authors.workspace = true
edition.workspace = true
version.workspace = true
repository.workspace = true
homepage.workspace = true
license.workspace = true

[features]
default = []
parallel = [
    "ark-ec/parallel",
    "ark-ff/parallel",
    "ark-groth16/parallel",
    "decaf377/parallel",
    "rayon",
    "fusion-shielded-pool/parallel",
]

[dependencies]
anyhow = {workspace = true}
ark-ec = {workspace = true, default-features = false}
ark-ff = {workspace = true, default-features = false}
ark-groth16 = {workspace = true, default-features = false}
ark-poly = { version = "0.4.2", default-features = false }
ark-relations = {workspace = true}
ark-serialize = {workspace = true}
blake2b_simd = {workspace = true}
decaf377 = {workspace = true, default-features = false}
fusion-dex = {workspace = true, default-features = true}
fusion-governance = {workspace = true, default-features = true}
fusion-proof-params = {workspace = true, default-features = true}
fusion-proto = {workspace = true, default-features = true}
fusion-shielded-pool = {workspace = true, default-features = true}
fusion-stake = {workspace = true, features = ["component"], default-features = true}
rand_core = {workspace = true, features = ["getrandom"]}
rayon = { version = "1.8.0", optional = true }

[dev-dependencies]
ark-r1cs-std = {workspace = true}
ark-snark = {workspace = true}
criterion = {workspace = true, features = ["html_reports"]}
fusion-dex = {workspace = true, default-features = true}
fusion-proof-params = {workspace = true, default-features = true}
rand_chacha = {workspace = true}
