[package]
name = "fusion-auto-https"
authors.workspace = true
edition.workspace = true
version.workspace = true
repository.workspace = true
homepage.workspace = true
license.workspace = true

[dependencies]
anyhow = {workspace = true}
futures = {workspace = true}
rustls = "0.23.20"
axum-server = {workspace = true, features = []}
rustls-acme = { version = "0.12.1", features = ["axum"] }
tracing = {workspace = true}
