[package]
name = "fusion-auction"
authors.workspace = true
edition.workspace = true
version.workspace = true
repository.workspace = true
homepage.workspace = true
license.workspace = true

[features]
component = [
    "cnidarium-component",
    "cnidarium",
    "fusion-sct/component",
    "fusion-shielded-pool/component",
    "fusion-dex/component",
    "tokio",
    "tonic",
    "fusion-proto/cnidarium",
    "fusion-proto/rpc",

    "futures",
    "async-stream",
    "async-trait",
]
default = ["component"]
docsrs = []
parallel = [
    "fusion-tct/parallel",
    "ark-ff/parallel",
    "decaf377-rdsa/parallel",
    "ark-groth16/parallel",
    "ark-r1cs-std/parallel",
    "decaf377/parallel",
]

[dependencies]
prost = {workspace = true}
prost-types = {workspace = true}
anyhow = {workspace = true}
ark-ff = {workspace = true, default-features = false}
ark-groth16 = {workspace = true, default-features = false}
ark-r1cs-std = {workspace = true, default-features = false}
ark-relations = {workspace = true}
ark-serialize = {workspace = true}
ark-snark = {workspace = true}
async-stream = {workspace = true, optional = true}
async-trait = {workspace = true, optional = true}
base64 = {workspace = true}
bech32 = {workspace = true}
bitvec = {workspace = true}
cnidarium = {workspace = true, default-features = false, optional = true}
cnidarium-component = {workspace = true, default-features = false, optional = true}
blake2b_simd = {workspace = true}
decaf377 = {workspace = true, features = ["r1cs"], default-features = true}
decaf377-rdsa = {workspace = true}
futures = {workspace = true, optional = true}
hex = {workspace = true}
im = {workspace = true, optional = true}
metrics = {workspace = true}
once_cell = {workspace = true}
pbjson-types = { workspace = true }
fusion-asset = {workspace = true, default-features = false}
fusion-keys = {workspace = true, default-features = false}
fusion-num = {workspace = true, default-features = false}
fusion-proof-params = {workspace = true, default-features = true}
fusion-proto = {workspace = true, default-features = true}
fusion-sct = {workspace = true, default-features = false}
fusion-dex = {workspace = true, default-features = false}
fusion-shielded-pool = {workspace = true, default-features = false}
fusion-tct = {workspace = true, default-features = true}
fusion-txhash = {workspace = true, default-features = false}
rand_chacha = {workspace = true}
rand_core = {workspace = true}
regex = {workspace = true}
serde = {workspace = true, features = ["derive"]}
serde_with = {workspace = true}
sha2 = {workspace = true}
tap = {workspace = true}
tendermint = {workspace = true, default-features = true}
tokio = {workspace = true, features = ["full", "tracing"], optional = true}
tonic = {workspace = true, optional = true}
tracing = {workspace = true}

[dev-dependencies]
ed25519-consensus = {workspace = true}
proptest = {workspace = true}
rand_chacha = {workspace = true}
tracing-subscriber = {workspace = true}
