[package]
name = "fusion-community-pool"
authors.workspace = true
edition.workspace = true
version.workspace = true
repository.workspace = true
homepage.workspace = true
license.workspace = true

[features]
component = [
    "cnidarium-component",
    "cnidarium",
    "fusion-proto/cnidarium",
    "fusion-shielded-pool/component",
]
default = ["component"]
docsrs = []

[dependencies]
anyhow = {workspace = true}
ark-ff = {workspace = true, default-features = false}
async-trait = {workspace = true}
base64 = {workspace = true}
blake2b_simd = {workspace = true}
cnidarium = {workspace = true, optional = true, default-features = true}
cnidarium-component = {workspace = true, optional = true, default-features = true}
futures = {workspace = true}
hex = {workspace = true}
metrics = {workspace = true}
once_cell = {workspace = true}
pbjson-types = {workspace = true}
fusion-asset = {workspace = true, default-features = false}
fusion-keys = {workspace = true, default-features = false}
fusion-num = {workspace = true, default-features = false}
fusion-proto = {workspace = true, default-features = false}
fusion-sct = {workspace = true, default-features = false}
fusion-shielded-pool = {workspace = true, default-features = false}
fusion-txhash = {workspace = true, default-features = false}
prost = {workspace = true}
serde = {workspace = true, features = ["derive"]}
sha2 = {workspace = true}
tendermint = {workspace = true}
tendermint-light-client-verifier = {workspace = true}
tracing = {workspace = true}

[dev-dependencies]
tokio = {workspace = true, features = ["full"]}
