[package]
name = "fusion-funding"
authors.workspace = true
edition.workspace = true
version.workspace = true
repository.workspace = true
homepage.workspace = true
license.workspace = true

[features]
component = [
    "cnidarium-component",
    "cnidarium",
    "fusion-proto/cnidarium",
    "fusion-community-pool/component",
    "fusion-distributions/component",
    "fusion-sct/component",
    "fusion-shielded-pool/component",
    "fusion-stake/component",
    "metrics",
    "futures"
]
default = ["component"]
docsrs = []

[dependencies]
anyhow = {workspace = true}
async-trait = {workspace = true}
cnidarium = {workspace = true, optional = true, default-features = true}
cnidarium-component = {workspace = true, optional = true, default-features = true}
futures = {workspace = true, optional = true}
metrics = {workspace = true, optional = true}
fusion-asset = {workspace = true, default-features = true}
fusion-community-pool = {workspace = true, default-features = false}
fusion-distributions = {workspace = true, default-features = false}
fusion-proto = {workspace = true, default-features = false}
fusion-sct = {workspace = true, default-features = false}
fusion-num = {workspace = true, default-features = false}
fusion-shielded-pool = {workspace = true, default-features = false}
fusion-stake = {workspace = true, default-features = false}
serde = {workspace = true, features = ["derive"]}
tendermint = {workspace = true}
tracing = {workspace = true}

[dev-dependencies]
