[package]
name = "fusion-funding"
authors.workspace = true
edition.workspace = true
version.workspace = true
repository.workspace = true
homepage.workspace = true
license.workspace = true

[features]
component = [
    "cnidarium-component",
    "cnidarium",
    "fusion-proto/cnidarium",
    "fusion-community-pool/component",
    "fusion-dex/component",
    "fusion-distributions/component",
    "fusion-governance/component",
    "fusion-sct/component",
    "fusion-shielded-pool/component",
    "fusion-stake/component",
    "metrics",
    "futures",
    "tonic",
]
default = ["component"]
parallel = [
    "ark-groth16/parallel",
    "decaf377/parallel",
    "decaf377-rdsa/parallel",
    "fusion-dex/parallel",
    "fusion-tct/parallel",
    "fusion-shielded-pool/parallel",
    "fusion-governance/parallel"
]
docsrs = []

[dependencies]
anyhow = {workspace = true}
ark-groth16 = {workspace = true, default-features = false}
async-trait = {workspace = true}
base64 = {workspace = true}
cnidarium = {workspace = true, optional = true, default-features = true}
cnidarium-component = {workspace = true, optional = true, default-features = true}
decaf377 = {workspace = true}
decaf377-rdsa = {workspace = true}
futures = {workspace = true, optional = true}
metrics = {workspace = true, optional = true}
fusion-asset = {workspace = true, default-features = true}
fusion-community-pool = {workspace = true, default-features = false}
fusion-dex = {workspace = true, default-features = false}
fusion-distributions = {workspace = true, default-features = false}
fusion-governance = {workspace = true, default-features = false}
fusion-keys = {workspace = true, default-features = false}
fusion-num = {workspace = true, default-features = false}
fusion-proof-params = {workspace = true, default-features = false}
fusion-proto = {workspace = true, default-features = false}
fusion-sct = {workspace = true, default-features = false}
fusion-shielded-pool = {workspace = true, default-features = false}
fusion-stake = {workspace = true, default-features = false}
fusion-tct = {workspace = true, default-features = false}
fusion-txhash = {workspace = true, default-features = false}
rand = {workspace = true}
serde = {workspace = true, features = ["derive"]}
tendermint = {workspace = true}
tracing = {workspace = true}
tonic = {workspace = true, optional = true}

[dev-dependencies]
proptest = {workspace = true}
